k8s/college-ingress-virtualhost-stickiness.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: college-ingress
  namespace: college
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: college-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=600
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: kgitbank.link
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:139394721163:certificate/23edddfe-46c7-41ef-8df8-b2249d898f0e

spec:
  defaultBackend:
    service:
      name: student-svc
      port:
        number: 80
#인덱스경로는 student-svc로 보내줍니다.
  rules:
  - host: www.kgitbank.link
    http:
      paths:
      - pathType: Prefix
        path: /student
        backend:
          service:
            name: student-svc
            port: 
              number: 80
#student경로는 student-svc로 보내줍니다.
  - host: www.kgitbank.link
    http:
      paths:
      - pathType: Prefix
        path: /admin
        backend:
          service:
            name: student-svc
            port: 
              number: 80
#admin경로는 student-svc로 보내줍니다.
  - host: www.kgitbank.link
    http:
      paths:
      - pathType: Prefix
        path: /sugang
        backend:
          service:
            name: subject-svc
            port: 
              number: 80
#sugang경로는 subject-svc로 보내줍니다.
  - host: prometheus.kgitbank.link
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-service
            port: 
              number: 80
#프로메테우스의 지표를 얻어가기 위해 프로메테우스로 접근 할 수 있도록 추가했습니다.
